style.css
html, body {
  text-align: center;
  height: 100%;
}

h1 {
    text-align: center;
    text-decoration: underline;
}

h3 {
    text-align: center;
    text-decoration: underline;
}

/* Header/Blog Title */
.header {
  padding: 30px;
  text-align: center;
  background: white;
}

.header h1 {
  font-size: 50px;
}

/* Style the top navigation bar */
.topnav {
  overflow: hidden;
  background-color: #333;
  display: flex;
  justify-content: center; /* Align items horizontally at the center */
}

/* Style the topnav links */
.topnav a {
  display: block;
  color: #f2f2f2;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
  margin-right: 50px;
}

/* Change color on hover */
.topnav a:hover {
  background-color: #ddd;
  color: black;
}

.row {
  width: 100%;
  text-align: center;
}

.columns {
  width: 33%;
  min-width: 280px;
  vertical-align: top;
  display: inline-block;
  background-color: #645f5c;
  color: #fff;
  margin-bottom: 20px;
  margin-right: 20px;
  border-radius: 10px;
  position: relative;
}

.columns img {
  width: 200px;
  height: 300px;
  border: 3px solid #000000;
  float: left;
  border-radius: 10px 0px 0px 10px;
}

.columns a {
  position: absolute;
  bottom: 10px;
  left: 185px;
  right: 0; /* Added to stretch the anchor element */
}

  .align-right {
    text-align: right;
  }

  a.fill-div {
    display: block;
    height: 100%;
    width: 100%;
    text-decoration: none;
}

  @media screen and (max-width: 680px) {
    .columns {
      width: 100%; 
    }

  }

  table {
    width: 80%;
    table-layout: fixed;
    border-collapse: collapse;
    margin: 0 auto;
  }
  
  th, td {
    text-align: left;
    padding: 0.5rem;
    border: 1px solid #ddd;
  }

  th {
    background-color: #FDDF95;
  }

  .active-page {
    background-color: #333;
    color: #fff;
  }
  
  footer {
    background-color: #333;
    color: #fff;
    text-align: center;
    padding: 10px;
    margin-top: auto;
  }

  .music-table-container {
    display: flex;
    justify-content: center;
    align-items: flex-start;
  }

  .music-table {
    width: 30%;
    min-width: 280px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #3d3c3c;
    color: white;
    margin-bottom: 20px;
    margin-right: 20px;
    border-radius: 10px;
    padding: 20px;
  }

  .music-table h2 {
    margin-bottom: 20px;
    text-decoration: underline;
  }

  .music-table table {
    width: 100%;
  }

  .music-table table td {
    text-align: center;
  }

  .music-table thead {
    background-color: #645f5c;
    font-weight: bold;
  }

  .music-table th {
    padding: 10px;
    text-align: center;
    color: black;
  }

  .music-table table th:first-child,
  .music-table table td:first-child {
    width: 10%;
    max-width: 50px;
  }

  .person-container {
    padding-top: 20px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: -10px;
  }
  
  .person {
    text-align: center;
    margin: 10px;
    flex-basis: calc(33.33% - 20px);
    max-width: calc(33.33% - 20px);
  }
  
  .person:last-child {
    margin-right: 0;
  }
  
  .person img {
    width: 150px;
    height: 150px;
    object-fit: cover;
    border-radius: 50%;
  }
  
  .person h3 {
    margin-top: 10px;
    text-decoration: none;
    white-space: normal;
  }
   

